# prd-first

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
documents/prd/: PRD.md
skill/: SKILL.md
src/prd_first/: __init__.py  __main__.py  checker.py  cli.py  const.py  drill.py  models.py  prompts.py  render.py  storage.py
src/prd_first/assets/drill-guides/: ai-agent.yaml  backend-data.yaml  cli-tool.yaml  web-app.yaml
src/prd_first/assets/templates/: _generic.md.j2  ai-agent.yaml  backend-data.yaml  cli-tool.yaml  web-app.yaml
tests/: test_checker.py  test_cli.py  test_drill.py  test_models.py  test_prompts.py  test_render.py  test_storage.py
